--- a/assets/index.css
+++ b/assets/index.css
@@ -7,5 +7,5 @@
 }
 body {
   background-color: #363535;
-  font-family: "ヒラギノ丸ゴ ProN";
+  font-family: "ヒラギノ丸ゴ ProN","Hiragino Maru Gothic ProN";
 }
