--- a/assets/index.css
+++ b/assets/index.css
@@ -9,4 +9,5 @@ body {
   background-color: #363535;
   color: #00f6ab;
   font-family: "ヒラギノ丸ゴ ProN","Hiragino Maru Gothic ProN";
+  padding: 2em;
 }
