--- a/assets/index.css
+++ b/assets/index.css
@@ -9,7 +9,7 @@ body {
   background-color: #363535;
   color: #00f6ab;
   font-family: "ヒラギノ丸ゴ ProN","Hiragino Maru Gothic ProN";
-  padding: 1em;
+  padding: 50px 0px 0px 0px;
 }
 header {
   position: fixed;
